--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mrs-node-logger",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "nodejs logging logstash",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "winston": "^1.0.0",
-    "winston-logstash": "^0.2.11"
+    "winston-logstash": "^0.2.11",
+    "express-winston":"0.3.1"
   }
 }
