--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mrs-node-logger",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "nodejs logging logstash",
   "main": "index.js",
   "scripts": {
@@ -11,9 +11,10 @@
   },
   "license": "ISC",
   "dependencies": {
-   "winston": "^1.0.0",
-   "winston-logstash": "^0.2.11",
-   "express-winston":"0.3.1",
+    "winston": "^1.0.0",
+    "winston-elasticsearch": "^0.4.0",
+    "winston-logstash": "^0.2.11",
+    "express-winston":"0.3.1",
     "uuid":"^2.0.1"
   }
 }
